--- a/src/app/Components/graph/graph.component.html
+++ b/src/app/Components/graph/graph.component.html
@@ -1,14 +1,16 @@
-<p>graph works!</p>
+
 
 <ngx-charts-line-chart
   [view]="view"
-  [scheme]="colorScheme"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
   [xAxis]="xAxis"
   [yAxis]="yAxis"
+  [autoScale]="true"
+  [schemeType]="schemeType"
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [timeline]="timeline"
-  [results]="multi">
+  [results]="multi"
+  [animations] = "false">
 </ngx-charts-line-chart>
